Adding assertion checking for system property